@@ -6,7 +6,8 @@ from stat import *
 __all__ = ["normcase","isabs","join","splitdrive","split","splitext",
            "basename","dirname","commonprefix","getsize","getmtime",
            "getatime","islink","exists","isdir","isfile",
-           "walk","expanduser","expandvars","normpath","abspath"]
+           "walk","expanduser","expandvars","normpath","abspath",
+           "supports_unicode_filenames"]
 
 # Normalize the case of a pathname.  Dummy in Posix, but <s>.lower() here.
 
@@ -248,3 +249,5 @@ def realpath(path):
         path = join(path, c)
         path = macfs.ResolveAliasFile(path)[0].as_pathname()
     return path
+
+supports_unicode_filenames = False
